Day3/3.capstone/app/kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-route
spec:
  to:
    kind: Service
    name: node-service
  port:
    targetPort: 3000
